--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.avif">
+		<img src="./assets/images/nina.avif" alt="Portrait de la photographe Nina Carducci">
 	</div>
 	<div id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -151,7 +151,7 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.avif">
+			<img src="./assets/images/camera.avif" alt="Photo d'un appareil photo">
 		</div>
 	</div>
 </div>
