--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.avif" class="d-block w-100" alt="homme traversant des passages piétons">
+				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.avif" class="d-block w-100" alt="Photo d'un homme traversant des passages piétons">
 			</div>
 			<div class="carousel-item">
 				<img src="./assets/images/slider/nicholas-green-npz8akkumdi-unsplash.avif" class="d-block w-100" alt="Photo du publique lors d'un concert">
