--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Nina Carducci - Photographe</title>
+	<title>Nina Carducci - Photographe professionnelle à Bordeaux</title>
+	<meta name="description" content="Nina Carducci, Photographe professionnelle à Bordeaux.">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +24,7 @@
 			<li><a href="#gallery">Galerie</a></li>
 			<li><a href="#services">Service</a></li>
 			<li><a href="#contact">Contact</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.avif" alt=""></a></li>
+			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.avif" alt="Logo instagram" title="Logo instagram"></a></li>
 		</ul>
 	</div>
 </div>
@@ -37,13 +38,13 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.avif" class="d-block w-100" alt="Photo d'un homme traversant des passages piétons">
+				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.avif" class="d-block w-100" alt="Photo d'un homme traversant des passages piétons" title="Homme traversant des passages piétons">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green-npz8akkumdi-unsplash.avif" class="d-block w-100" alt="Photo du publique lors d'un concert">
+				<img src="./assets/images/slider/nicholas-green-npz8akkumdi-unsplash.avif" class="d-block w-100" alt="Photo du publique lors d'un concert" title="Public d'un concert">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/edward-cisneros-3_h6-1npdgw-unsplash.avif" class="d-block w-100" alt="Photo d'un couple marié s'embrassant après leur première danse de mariage">
+				<img src="./assets/images/slider/edward-cisneros-3_h6-1npdgw-unsplash.avif" class="d-block w-100" alt="Photo d'un couple marié s'embrassant après leur première danse de mariage" title="Couple marié s'embrassant">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -58,7 +59,7 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.avif" alt="Portrait de la photographe Nina Carducci">
+		<img src="./assets/images/nina.avif" alt="Portrait de la photographe Nina Carducci" title="Nina Carducci">
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h2>
@@ -71,15 +72,15 @@
 	<h2 class="title">Portfolio</h2>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.avif" alt="Photo d'un groupe de musique jouant sur scène prise depuis le public"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.avif" alt="Photo d'un homme d'affaire habillé en costume noir et croisant les bras"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.avif" alt="Photo d'une femme avec un grand sourire durant une réunion professionnelle"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.avif" alt="Photo des mains des mariés se touchant par le bout des doigts"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.avif" alt="Portrait d'un homme noir, portant une barbe noir, les yeux fermés"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.avif" alt="Photo des mariés marchant, se tenant par la mains et se regardant avec un sourire"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.avif" alt="Portrait d'une femme à lunettese touchant les cheveux avec sa main droite"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.avif" alt="Photo d'un chanteur en pleine performance"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.avif" alt="Photo d'une femme travaillant sur son ordinateur portable et ayant un grand sourire"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.avif" alt="Photo d'un groupe de musique jouant sur scène prise depuis le public" title="Groupe de musique en concert"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.avif" alt="Photo d'un homme d'affaire habillé en costume noir et croisant les bras" title="Homme d'affaire"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.avif" alt="Photo d'une femme avec un grand sourire durant une réunion professionnelle" title="Femme en réunion d'entreprise"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.avif" alt="Photo des mains des mariés se touchant par le bout des doigts" title="Mains de mariés"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.avif" alt="Portrait d'un homme noir, portant une barbe noir, les yeux fermés" title="Portrait d'un homme"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.avif" alt="Photo des mariés marchant, se tenant par la mains et se regardant avec un sourire" title="Couple de jeunes mariés"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.avif" alt="Portrait d'une femme à lunettese touchant les cheveux avec sa main droite" title="Portrait d'une femme"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.avif" alt="Photo d'un chanteur en pleine performance" title="Chanteur en concert"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.avif" alt="Photo d'une femme travaillant sur son ordinateur portable et ayant un grand sourire" title="Femme hilarde"/>
 		</div>
 	</div>
 	<div class="quote">
@@ -151,7 +152,7 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.avif" alt="Photo d'un appareil photo">
+			<img src="./assets/images/camera.avif" alt="Photo d'un appareil photo" title="Appareil photo">
 		</div>
 	</div>
 </div>
