--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="language" content="fr-FR">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Nina Carducci - Photographe professionnelle à Bordeaux</title>
-	<meta name="description" content="Nina Carducci, Photographe professionnelle à Bordeaux.">
+	<meta name="description" content="Nina Carducci, Photographe professionnelle à Bordeaux. Portraits, photos d'entreprise ou évenementtielle, je réponds à toutes vos demandes avec des prises dont vous vous souviendrez.">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +15,43 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.min.js"></script>
 	<script src="./assets/scripts.min.js"></script>
+	<!--  Rich Snippet Google  -->
+	<script type="application/ld+json">
+		{
+			"@context": "https://schema.org",
+			"@type": "ProfessionalService",
+			"name": "Nina Carducci",
+			"image": "https://github.com/JBB777/OCProject8/blob/main/assets/images/nina.avif",
+			"@id": "https://github.com/JBB777/OCProject8/blob/main/assets/images/nina.avif",
+			"url": "https://github.com/JBB777/OCProject8",
+			"telephone": "05 56 67 78 89",
+			"priceRange": "50 - 400€",
+			"address": {
+				"@type": "PostalAddress",
+				"streetAddress": "68 avenue Alsace-Lorraine",
+				"addressLocality": "Bordeaux",
+				"postalCode": "33200",
+				"addressCountry": "FR"
+			},
+			"geo": {
+				"@type": "GeoCoordinates",
+				"latitude": 44.8465743,
+				"longitude": -0.6065364999999999
+			},
+			"openingHoursSpecification": {
+				"@type": "OpeningHoursSpecification",
+				"dayOfWeek": [
+				"Lundi",
+				"Mardi",
+				"Mercredi",
+				"Jeudi",
+				"Vendredi"
+				],
+				"opens": "10:00",
+				"closes": "19:00"
+			} 
+		}
+	</script>
 </head>
 <body>
 <div class="top-header">
