Ajout Twitter Cards + Facebook Open Graph + correction faute d'orthographe

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta name="language" content="fr-FR">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Nina Carducci - Photographe professionnelle à Bordeaux</title>
-	<meta name="description" content="Nina Carducci, Photographe professionnelle à Bordeaux. Portraits, photos d'entreprise ou évenementtielle, je réponds à toutes vos demandes avec des prises dont vous vous souviendrez.">
+	<meta name="description" content="Nina Carducci, Photographe professionnelle à Bordeaux. Portraits, photos d'entreprise ou évènementielle, je réponds à toutes vos demandes avec des prises dont vous vous souviendrez.">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -52,6 +52,18 @@
 			} 
 		}
 	</script>
+	<!--  Twitter Cards  -->
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:title" content="Nina Carducci - Photographe professionnelle à Bordeaux">
+	<meta name="twitter:site" content="@https://jbb777.github.io/OCProject8/">
+	<meta name="twitter:description" content="Nina Carducci, Photographe professionnelle à Bordeaux. Portraits, photos d'entreprise ou évènementielle, je réponds à toutes vos demandes avec des prises dont vous vous souviendrez.">
+	<meta name="twitter:image" content="https://github.com/JBB777/OCProject8/blob/main/assets/images/nina.avif">
+	<!--  Open Graph - Facebook  -->
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Nina Carducci - Photographe professionnelle à Bordeaux">
+	<meta property="og:url" content="https://jbb777.github.io/OCProject8/">
+	<meta property="og:image" content="https://github.com/JBB777/OCProject8/blob/main/assets/images/nina.avif">
+	<meta property="og:description" content="Nina Carducci, Photographe professionnelle à Bordeaux. Portraits, photos d'entreprise ou évènementielle, je réponds à toutes vos demandes avec des prises dont vous vous souviendrez.">
 </head>
 <body>
 <div class="top-header">
