Ajout footer test accessibilité

--- a/index.html
+++ b/index.html
@@ -206,5 +206,27 @@
 		</div>
 	</div>
 </div>
+<footer>
+	<div>
+		<ul>
+			<li class="footer__title">Adresse:</li>
+			<li>Nina Carducci - Photographe</li>
+			<li>68 avenue Alsace-Lorraine</li>
+			<li>33200 Bordeaux</li>
+		</ul>
+	</div>
+	<div>
+		<ul>
+			<li class="footer__title">Téléphone:</li>
+			<li>05 56 67 78 89</li>
+		</ul>
+	</div>
+	<div>
+		<ul>
+			<li class="footer__title">Horaires d'ouverture:</li> 
+			<li>Du lundi au vendredi de 10:00 à 19:00</li>
+		</ul>
+	</div>
+</footer>
 </body>
 </html>
