ajout balise main

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 		</button>
 	</div>
 </div>
+<main>
 <div id="about">
 	<div class="picture left">
 		<img src="./assets/images/nina.avif" alt="Portrait de la photographe Nina Carducci" title="Nina Carducci">
@@ -206,6 +207,7 @@
 		</div>
 	</div>
 </div>
+</main>
 <footer>
 	<div>
 		<ul>
