--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 			"@context": "https://schema.org",
 			"@type": "ProfessionalService",
 			"name": "Nina Carducci",
-			"image": "https://github.com/JBB777/OCProject8/blob/main/assets/images/nina.avif",
-			"@id": "https://github.com/JBB777/OCProject8/blob/main/assets/images/nina.avif",
+			"image": "https://jbb777.github.io/OCProject8/assets/images/nina.avif",
+			"@id": "https://jbb777.github.io/OCProject8/assets/images/nina.avif",
 			"url": "https://github.com/JBB777/OCProject8",
 			"telephone": "05 56 67 78 89",
 			"priceRange": "50 - 400€",
@@ -56,12 +56,12 @@
 	<meta name="twitter:title" content="Nina Carducci - Photographe professionnelle à Bordeaux">
 	<meta name="twitter:site" content="@https://jbb777.github.io/OCProject8/">
 	<meta name="twitter:description" content="Nina Carducci, Photographe professionnelle à Bordeaux. Portraits, photos d'entreprise ou évènementielle, je réponds à toutes vos demandes avec des prises dont vous vous souviendrez.">
-	<meta name="twitter:image" content="https://github.com/JBB777/OCProject8/blob/main/assets/images/nina.avif">
+	<meta name="twitter:image" content="https://jbb777.github.io/OCProject8/assets/images/nina.avif">
 	<!--  Open Graph - Facebook  -->
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Nina Carducci - Photographe professionnelle à Bordeaux">
 	<meta property="og:url" content="https://jbb777.github.io/OCProject8/">
-	<meta property="og:image" content="https://github.com/JBB777/OCProject8/blob/main/assets/images/nina.avif">
+	<meta property="og:image" content="https://jbb777.github.io/OCProject8/assets/images/nina.avif">
 	<meta property="og:description" content="Nina Carducci, Photographe professionnelle à Bordeaux. Portraits, photos d'entreprise ou évènementielle, je réponds à toutes vos demandes avec des prises dont vous vous souviendrez.">
 </head>
 <body>
@@ -87,13 +87,13 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.avif" class="d-block w-100" alt="Photo d'un homme traversant des passages piétons" title="Homme traversant des passages piétons">
+				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.avif" class="d-block w-100" alt="Photo d'un homme traversant des passages piétons" title="Homme traversant des passages piétons" loading="lazy">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green-npz8akkumdi-unsplash.avif" class="d-block w-100" alt="Photo du publique lors d'un concert" title="Public d'un concert">
+				<img src="./assets/images/slider/nicholas-green-npz8akkumdi-unsplash.avif" class="d-block w-100" alt="Photo du publique lors d'un concert" title="Public d'un concert" loading="lazy">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/edward-cisneros-3_h6-1npdgw-unsplash.avif" class="d-block w-100" alt="Photo d'un couple marié s'embrassant après leur première danse de mariage" title="Couple marié s'embrassant">
+				<img src="./assets/images/slider/edward-cisneros-3_h6-1npdgw-unsplash.avif" class="d-block w-100" alt="Photo d'un couple marié s'embrassant après leur première danse de mariage" title="Couple marié s'embrassant" loading="lazy">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -109,7 +109,7 @@
 <main>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.avif" alt="Portrait de la photographe Nina Carducci" title="Nina Carducci">
+		<img src="./assets/images/nina.avif" alt="Portrait de la photographe Nina Carducci" title="Nina Carducci" loading="lazy">
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h2>
@@ -122,15 +122,15 @@
 	<h2 class="title">Portfolio</h2>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.avif" alt="Photo d'un groupe de musique jouant sur scène prise depuis le public" title="Groupe de musique en concert"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.avif" alt="Photo d'un homme d'affaire habillé en costume noir et croisant les bras" title="Homme d'affaire"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.avif" alt="Photo d'une femme avec un grand sourire durant une réunion professionnelle" title="Femme en réunion d'entreprise"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.avif" alt="Photo des mains des mariés se touchant par le bout des doigts" title="Mains de mariés"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.avif" alt="Portrait d'un homme noir, portant une barbe noir, les yeux fermés" title="Portrait d'un homme"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.avif" alt="Photo des mariés marchant, se tenant par la mains et se regardant avec un sourire" title="Couple de jeunes mariés"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.avif" alt="Portrait d'une femme à lunettese touchant les cheveux avec sa main droite" title="Portrait d'une femme"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.avif" alt="Photo d'un chanteur en pleine performance" title="Chanteur en concert"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.avif" alt="Photo d'une femme travaillant sur son ordinateur portable et ayant un grand sourire" title="Femme hilarde"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.avif" alt="Photo d'un groupe de musique jouant sur scène prise depuis le public" title="Groupe de musique en concert" loading="lazy">
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.avif" alt="Photo d'un homme d'affaire habillé en costume noir et croisant les bras" title="Homme d'affaire" loading="lazy">
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.avif" alt="Photo d'une femme avec un grand sourire durant une réunion professionnelle" title="Femme en réunion d'entreprise" loading="lazy">
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.avif" alt="Photo des mains des mariés se touchant par le bout des doigts" title="Mains de mariés" loading="lazy">
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.avif" alt="Portrait d'un homme noir, portant une barbe noir, les yeux fermés" title="Portrait d'un homme" loading="lazy">
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.avif" alt="Photo des mariés marchant, se tenant par la mains et se regardant avec un sourire" title="Couple de jeunes mariés" loading="lazy">
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.avif" alt="Portrait d'une femme à lunettese touchant les cheveux avec sa main droite" title="Portrait d'une femme" loading="lazy">
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.avif" alt="Photo d'un chanteur en pleine performance" title="Chanteur en concert" loading="lazy">
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.avif" alt="Photo d'une femme travaillant sur son ordinateur portable et ayant un grand sourire" title="Femme hilarde" loading="lazy">
 		</div>
 	</div>
 	<div class="quote">
@@ -191,18 +191,18 @@
 		<div class="form-container">
 			<h3>Une question ? Une demande de devis ?</h3>
 			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-			<form action="" method="post">
+			<form action="#" method="post">
 				<label for="nom">Nom</label>
 				<input type="text" name="nom" id="nom">
 				<label for="email">Email</label>
 				<input type="email" name="email" id="email">
 				<label for="message">Message</label>
 				<textarea name="message" id="message" cols="30" rows="10"></textarea>
-				<input type="submit" value="Envoyer"/>
+				<input type="submit" value="Envoyer">
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.avif" alt="Photo d'un appareil photo" title="Appareil photo">
+			<img src="./assets/images/camera.avif" alt="Photo d'un appareil photo" title="Appareil photo" loading="lazy">
 		</div>
 	</div>
 </div>
