--- a/index.html
+++ b/index.html
@@ -97,11 +97,15 @@
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<div class="carousel-control-bg">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			</div>
 			<span class="visually-hidden">Previous</span>
 		</button>
 		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<div class="carousel-control-bg">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			</div>
 			<span class="visually-hidden">Next</span>
 		</button>
 	</div>
