--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <main>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.avif" alt="Portrait de la photographe Nina Carducci" title="Nina Carducci" loading="lazy">
+		<img src="./assets/images/nina.avif" alt="Portrait de la photographe Nina Carducci" title="Nina Carducci">
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h2>
