--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 	<meta name="twitter:title" content="Nina Carducci - Photographe professionnelle à Bordeaux">
 	<meta name="twitter:site" content="@https://jbb777.github.io/OCProject8/">
 	<meta name="twitter:description" content="Nina Carducci, Photographe professionnelle à Bordeaux. Portraits, photos d'entreprise ou évènementielle, je réponds à toutes vos demandes avec des prises dont vous vous souviendrez.">
-	<meta name="twitter:image" content="https://jbb777.github.io/OCProject8/assets/images/nina.avif">
+	<meta name="twitter:image" content="https://jbb777.github.io/OCProject8/assets/images/nina.png">
 	<!--  Open Graph - Facebook  -->
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Nina Carducci - Photographe professionnelle à Bordeaux">
 	<meta property="og:url" content="https://jbb777.github.io/OCProject8/">
-	<meta property="og:image" content="https://jbb777.github.io/OCProject8/assets/images/nina.avif">
+	<meta property="og:image" content="https://jbb777.github.io/OCProject8/assets/images/nina.png">
 	<meta property="og:description" content="Nina Carducci, Photographe professionnelle à Bordeaux. Portraits, photos d'entreprise ou évènementielle, je réponds à toutes vos demandes avec des prises dont vous vous souviendrez.">
 </head>
 <body>
