modif descriptions meta

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Nina Carducci - Photographe professionnelle à Bordeaux</title>
-	<meta name="description" content="Nina Carducci, Photographe professionnelle à Bordeaux. Portraits, photos d'entreprise ou évènementielle, je réponds à toutes vos demandes avec des prises dont vous vous souviendrez.">
+	<meta name="description" content="Portraits, photos d'entreprise ou évènementielle, je réponds à toutes vos demandes avec des prises dont vous vous souviendrez.">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
@@ -54,14 +54,14 @@
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:title" content="Nina Carducci - Photographe professionnelle à Bordeaux">
 	<meta name="twitter:site" content="@https://jbb777.github.io/OCProject8/">
-	<meta name="twitter:description" content="Nina Carducci, Photographe professionnelle à Bordeaux. Portraits, photos d'entreprise ou évènementielle, je réponds à toutes vos demandes avec des prises dont vous vous souviendrez.">
+	<meta name="twitter:description" content="Portraits, photos d'entreprise ou évènementielle, je réponds à toutes vos demandes avec des prises dont vous vous souviendrez.">
 	<meta name="twitter:image" content="https://jbb777.github.io/OCProject8/assets/images/nina.png">
 	<!--  Open Graph - Facebook  -->
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Nina Carducci - Photographe professionnelle à Bordeaux">
 	<meta property="og:url" content="https://jbb777.github.io/OCProject8/">
 	<meta property="og:image" content="https://jbb777.github.io/OCProject8/assets/images/nina.png">
-	<meta property="og:description" content="Nina Carducci, Photographe professionnelle à Bordeaux. Portraits, photos d'entreprise ou évènementielle, je réponds à toutes vos demandes avec des prises dont vous vous souviendrez.">
+	<meta property="og:description" content="Portraits, photos d'entreprise ou évènementielle, je réponds à toutes vos demandes avec des prises dont vous vous souviendrez.">
 </head>
 <body>
 <div class="top-header">
